# earlymodernner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dev/: __init__.py  evaluate.py  generate_synthetic_training.py  prepare_training_data.py  train_lora.py  training.md  upload_to_hub.py
dev/config/: ensemble_commodity_augmented.yaml  ensemble_organization_augmented.yaml  ensemble_person_augmented.yaml  ensemble_toponym_silver.yaml  template.yaml
dev/eval_sets/: eval_100.jsonl
dev/eval_sets/gold_standard/: Anonymous - 1643 - A briefe relation, abstracted out of severall letters, of a most hellish, cruell, and bloudy plot ag_page_3.json  Anonymous - 1660 - By the merchants owners of ships and mariners, trading to His Majesties sugar-plantations_page_2.json  Anonymous - 1675 - Every woman her own midwife, or, A Compleat cabinet opened for child-bearing women furnished with di.json  Anonymous - 1675 - The Accomplish'd lady's delight in preserving, physick, beautifying, and cookery containing I. the a_page_102.json  Anonymous - 1675 - The gentlewomans cabinet unlocked wherein is contained many excellent receipts for neat dressing of_page_8.json  Anonymous - 1676 - Wonderful news from Bristol_page_5.json  Anonymous - 1677 - The Case of His Majesties Plantations_page_3.json  Anonymous - 1680 - The Interest of the three kingdoms, with respect to the business of the black box, and all the other_page_10.json  Anonymous - 1682 - A letter from Jamaica to a friend in London concerning kid-napping_page_1.json  (+91 more)
docs/: corpus.md  usage.md
earlymodernner/: __init__.py  __main__.py  constants.py  metrics.py  normalization.py  pipeline.py  version.py
(+12 files in other folders)
