[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "earlymodernner"
version = "0.1.0"
description = "Named Entity Recognition for Early Modern English documents (1500-1800)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jacob Polay"}
]
keywords = ["NER", "named entity recognition", "early modern", "historical", "digital humanities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
train = [
    "datasets>=2.19.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/polayj/earlymodernner"
Repository = "https://github.com/polayj/earlymodernner"

[project.scripts]
earlymodernner = "earlymodernner.__main__:main"

[tool.setuptools]
packages = ["earlymodernner", "dev"]

[tool.setuptools.package-data]
dev = [
    "config/*.yaml",
]

[tool.setuptools.exclude-package-data]
"*" = ["_archive", "_archive/**"]
